# otus-cpp

./: main.cpp
.github/workflows/: project.yml  release.yml  release1.yml  release10.yml  release11.yml  release12.yml  release13.yml  release2.yml  release3.yml  release4.yml  release5.yml  release6.yml  release7.yml  release8.yml  release9.yml  static.yml
homework1/: CMakeLists.txt
homework10/: CMakeLists.txt  asio_async_server.cpp  asio_async_server.h  commbulk.hpp  hello_test.cc  main.cpp  parsercomm.hpp  printer.hpp  util.cpp  waiting_queue.hpp
homework11/: CMakeLists.txt  DBCluster.cpp  DBCluster.h  asio_async_server.cpp  asio_async_server.h  main.cpp  mapper.cpp  output  queries.cpp  queries.h  reducer.cpp  row.cpp  row.h  run_locally.sh  tableDAO.hpp  waiting_queue.hpp
homework12/: Makefile  mapper.cpp  util.h  util.hpp
homework13/: CMakeLists.txt  classifier.h  hello_test.cc  helpers.h  main.cpp  mapper.cpp  tf_classifier.cpp  tf_classifier.h
homework2/: CMakeLists.txt  hello_test.cc  ip_filter.cpp  util.cpp  util.h
homework3/: CMakeLists.txt  allocator.hpp  allocators.cpp  container.hpp  hello_test.cc  util.h
homework4/: CMakeLists.txt  Doxyfile  hello_test.cc  print_ip.cpp  util.hpp
homework5/: CMakeLists.txt  controller.cpp  controller.h  image.cpp  image.h  painter.cpp  pen.cpp  pen.h  shapes.cpp  shapes.h  util.hpp
homework6/: CMakeLists.txt  hello_test.cc  matrix.cpp  util.hpp
homework7/: CMakeLists.txt  bulk.cpp  commbulk.cpp  commbulk.h  hello_test.cc  parsercomm.cpp  parsercomm.h  printer.cpp  printer.h
homework8/: CMakeLists.txt  file_reader.cpp  file_reader.h  find_duplicate.cpp  find_duplicate.h  hash.cpp  hash.h  hello_test.cc  main.cpp  test_version.cpp  util.cpp  util.h
homework9/: CMakeLists.txt  async.cpp  commbulk.hpp  main.cpp  parsercomm.hpp  printer.hpp  waiting_queue.hpp
project/: CMakeLists.txt  empty.txt  fft_api.cpp  fft_api.h  fft_wt.txt  filters_api.cpp  filters_api.h  hello_test.cc  main.cpp  only_fft.txt  only_wt.txt  only_wt3.txt  only_wt4.txt  output.cpp  output.h  test.cpp  test_fft_input.txt  test_fft_output.txt  test_fft_wt_output.txt  test_input.txt  test_output.txt  test_wt_output.txt  wavelet_cpp_api.cpp  wavelet_cpp_api.h  wavelet_denoise.c  wavelet_denoise.h
project/proto/: filter.proto
